--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,85 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>Final 2019 Free Agent Leaderboard</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3>1455</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Mitch Trubisky         </td><td><font size=3>1380</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Kyle Allen             </td><td><font size=3>1340</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 980</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Case Keenum            </td><td><font size=3> 855</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Eli Manning            </td><td><font size=3> 505</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 470</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Matt Moore             </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Matt Schaub            </td><td><font size=3> 245</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Brandon Allen          </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Brian Hoyer            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Ben Roethlisberger     </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Drew Lock              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Adrian Peterson        </td><td><font size=3> 675</td></tr>
-<tr><td><font size=3>Rashaad Penny          </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Nyheim Hines           </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>Gus Edwards            </td><td><font size=3> 525</td></tr>
-<tr><td><font size=3>Duke Johnson           </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Boston Scott           </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>DeAndre Washington     </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Royce Freeman          </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Darrel Williams        </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Frank Gore             </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Nyheim Hines           </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Peyton Barber          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Josh Adams             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Carlos Hyde            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Golden Tate            </td><td><font size=3> 925</td></tr>
-<tr><td><font size=3>Chris Conley           </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Cole Beasley           </td><td><font size=3> 685</td></tr>
-<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>James Washington       </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>Kenny Stills           </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 510</td></tr>
-<tr><td><font size=3>Willie Snead           </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 470</td></tr>
-<tr><td><font size=3>Taylor Gabriel         </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 410</td></tr>
-<tr><td><font size=3>John Ross              </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Tre'Quan Smith         </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Anthony Miller         </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Robby Anderson         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Anthony Miller         </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Willie Snead           </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Sammy Watkins          </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Allen Lazard           </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Russell Gage           </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Corey Davis            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Javon Wims             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Danny Amendola         </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Parris Campbell        </td><td><font size=3>  35</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Mike Gesicki           </td><td><font size=3> 520</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Will Dissly            </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jason Witten           </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Tyler Eifert           </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 245</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jacob Hollister        </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Dan Arnold             </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Hayden Hurst           </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>OJ Howard              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>David Njoku            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Greg Olsen             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Logan Thomas           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jimmy Graham           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3>1145</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3>1075</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3>1055</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3>1010</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 980</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 965</td></tr>
-<tr><td><font size=3>Sam Ficken             </td><td><font size=3> 860</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3> 855</td></tr>
-<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 840</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 840</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 775</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 670</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 525</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 510</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>  70</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  65</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Sam Ficken             </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Stephen Gostkowski     </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3>1005</td></tr>
-<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 955</td></tr>
-<tr><td><font size=3>Steven Sims            </td><td><font size=3> 775</td></tr>
-<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 570</td></tr>
-<tr><td><font size=3>Foster Moreau          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Kaden Smith            </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Andy Isabella          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Qadree Ollison         </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Irv Smith              </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Bisi Johnson           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Olamide Zaccheaus      </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Scott Miller           </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>Hale Hentges           </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Parris Campbell        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Dalton Keene           </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
