--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
-    <td width=42><b>Roger</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Randy</b></td>
-    <td width=42><b>Grant</b></td>
+    <td width=42><b>Rich</b></td>
     <td width=42><b>Steven</b></td>
+    <td width=42><b>States</b></td>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>Roger</b></td>
     <td width=42><b>John</b></td>
     <td width=42><b>Sam</b></td>
-    <td width=42><b>Rich</b></td>
-    <td width=42><b>Mike</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Matthew</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>2980</td>
-    <td align='right'>2010</td>
-    <td align='right'>3865</td>
-    <td align='right'>2295</td>
-    <td align='right'>2030</td>
-    <td align='right'>2355</td>
-    <td align='right'>2565</td>
-    <td align='right'>2980</td>
-    <td align='right'>2950</td>
-    <td align='right'>2710</td></tr>
+    <td align='right'>125</td>
+    <td align='right'>200</td>
+    <td align='right'>135</td>
+    <td align='right'>185</td>
+    <td align='right'>255</td>
+    <td align='right'>155</td>
+    <td align='right'>275</td>
+    <td align='right'>75</td>
+    <td align='right'>40</td>
+    <td align='right'>165</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>1680</td>
-    <td align='right'>1520</td>
-    <td align='right'>1325</td>
-    <td align='right'>2750</td>
-    <td align='right'>1500</td>
-    <td align='right'>1010</td>
-    <td align='right'>670</td>
-    <td align='right'>1400</td>
-    <td align='right'>1495</td>
-    <td align='right'>2515</td></tr>
+    <td align='right'>125</td>
+    <td align='right'>195</td>
+    <td align='right'>215</td>
+    <td align='right'>30</td>
+    <td align='right'>170</td>
+    <td align='right'>40</td>
+    <td align='right'>135</td>
+    <td align='right'>145</td>
+    <td align='right'>200</td>
+    <td align='right'>295</td></tr>
 <tr><td align='right'>Other RB's</td>
-    <td align='right'>1060</td>
-    <td align='right'>1465</td>
-    <td align='right'>1190</td>
-    <td align='right'>1975</td>
-    <td align='right'>1320</td>
-    <td align='right'>830</td>
-    <td align='right'>1225</td>
-    <td align='right'>990</td>
-    <td align='right'>700</td>
-    <td align='right'>665</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>80</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>55</td>
+    <td align='right'>75</td>
+    <td align='right'>30</td>
+    <td align='right'>195</td></tr>
 <tr><td align='right'>Best WR</td>
-    <td align='right'>575</td>
-    <td align='right'>1350</td>
-    <td align='right'>705</td>
-    <td align='right'>1250</td>
-    <td align='right'>800</td>
-    <td align='right'>1105</td>
-    <td align='right'>1225</td>
-    <td align='right'>960</td>
-    <td align='right'>1060</td>
-    <td align='right'>1060</td></tr>
+    <td align='right'>40</td>
+    <td align='right'>235</td>
+    <td align='right'>215</td>
+    <td align='right'>180</td>
+    <td align='right'>75</td>
+    <td align='right'>75</td>
+    <td align='right'>225</td>
+    <td align='right'>35</td>
+    <td align='right'>25</td>
+    <td align='right'>40</td></tr>
 <tr><td align='right'>Other WR's</td>
-    <td align='right'>730</td>
-    <td align='right'>1640</td>
-    <td align='right'>1000</td>
-    <td align='right'>1125</td>
-    <td align='right'>1245</td>
-    <td align='right'>1290</td>
-    <td align='right'>1115</td>
-    <td align='right'>1065</td>
-    <td align='right'>1175</td>
-    <td align='right'>1155</td></tr>
+    <td align='right'>35</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>45</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>TE</td>
-    <td align='right'>710</td>
-    <td align='right'>515</td>
-    <td align='right'>740</td>
-    <td align='right'>1025</td>
-    <td align='right'>795</td>
-    <td align='right'>310</td>
-    <td align='right'>915</td>
-    <td align='right'>605</td>
-    <td align='right'>795</td>
-    <td align='right'>230</td></tr>
+    <td align='right'>150</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>100</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>950</td>
-    <td align='right'>1540</td>
-    <td align='right'>1270</td>
-    <td align='right'>1495</td>
-    <td align='right'>900</td>
-    <td align='right'>910</td>
-    <td align='right'>855</td>
-    <td align='right'>1120</td>
-    <td align='right'>1065</td>
-    <td align='right'>1150</td></tr>
+    <td align='right'>40</td>
+    <td align='right'>90</td>
+    <td align='right'>70</td>
+    <td align='right'>60</td>
+    <td align='right'>60</td>
+    <td align='right'>10</td>
+    <td align='right'>40</td>
+    <td align='right'>40</td>
+    <td align='right'>95</td>
+    <td align='right'>125</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>500</td>
-    <td align='right'>1150</td>
-    <td align='right'>2055</td>
-    <td align='right'>1370</td>
-    <td align='right'>1515</td>
-    <td align='right'>990</td>
-    <td align='right'>960</td>
-    <td align='right'>2355</td>
-    <td align='right'>1040</td>
-    <td align='right'>890</td></tr>
+    <td align='right'>25</td>
+    <td align='right'>30</td>
+    <td align='right'>60</td>
+    <td align='right'>25</td>
+    <td align='right'>100</td>
+    <td align='right'>150</td>
+    <td align='right'>55</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>70</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>9185</td>
-    <td align='right'>11190</td>
-    <td align='right'>12150</td>
-    <td align='right'>13285</td>
-    <td align='right'>10105</td>
-    <td align='right'>8800</td>
-    <td align='right'>9530</td>
-    <td align='right'>11475</td>
-    <td align='right'>10280</td>
-    <td align='right'>10375</td></tr>
+    <td align='right'>540</td>
+    <td align='right'>830</td>
+    <td align='right'>775</td>
+    <td align='right'>625</td>
+    <td align='right'>710</td>
+    <td align='right'>430</td>
+    <td align='right'>815</td>
+    <td align='right'>420</td>
+    <td align='right'>415</td>
+    <td align='right'>940</td></tr>
 </table>
