--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Darius Slayton/Ke'Shawn Vaughn</td>
+<td width=50>9/15</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dallas Goedert/Anthony McFarland</td>
+<td width=50>9/15</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Nyheim Hines/Devin Asiasi</td>
+<td width=50>9/15</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -328,6 +328,7 @@
 <td width=600>
 Free Pickups:<br>
 Team 1  - Ryan Succop/Matt Gay (9/12)<br>
-Team 9  - Marvin Jones/Deebo Samuel (9/13)
+Team 9  - Marvin Jones/Deebo Samuel (9/13)<br>
+Team 8  - Malcolm Brown/Blake Jarwin (9/15)
 </td></tr>
 </table>
