--- a/roster.html
+++ b/roster.html
@@ -46,6 +46,7 @@
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
+<tr><td>NYG</td><td>Darius Slayton         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td>LAC</td><td>Hunter Henry           </td></tr>
@@ -56,7 +57,6 @@
 <tr><td>NYJ</td><td>Denzel Mims            </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
-<tr><td> TB</td><td>Ke'Shawn Vaughn        </td></tr>
 <tr><td>BUF</td><td>Jake Fromm             </td></tr>
 </table>
 </td>
@@ -163,6 +163,7 @@
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
+<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td>JAX</td><td>Josh Lambo             </td></tr>
@@ -170,7 +171,6 @@
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
-<tr><td>PIT</td><td>Anthony McFarland      </td></tr>
 <tr><td>NYJ</td><td>La'Mical Perine        </td></tr>
 </table>
 </td>
@@ -215,6 +215,7 @@
 <tr><td>ATL</td><td>Todd Gurley            </td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
+<tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
@@ -222,7 +223,6 @@
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Hooper          </td></tr>
-<tr><td>DAL</td><td>Blake Jarwin           </td></tr>
 <tr><td>TEN</td><td>Jonnu Smith            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
@@ -243,6 +243,7 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
+<tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
@@ -257,7 +258,6 @@
 <tr><td>LAR</td><td>Cam Akers              </td></tr>
 <tr><td>PHI</td><td>Jalen Reagor           </td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
-<tr><td> NE</td><td>Devin Asiasi           </td></tr>
 </table>
 </td>
 </tr>
