--- a/week2.html
+++ b/week2.html
@@ -142,8 +142,8 @@
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Sloman</td>        <td></td><td align=right>0</td></tr>
