--- a/week2.html
+++ b/week2.html
@@ -82,9 +82,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gallup</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
@@ -100,7 +100,7 @@
 <tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -112,7 +112,7 @@
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
