--- a/thousand.html
+++ b/thousand.html
@@ -399,6 +399,12 @@
     <td>1125</td>
     <td>Randy</td>
     <td>675</td></tr>
+<tr><td>2020</td>
+    <td>Week 2</td>
+    <td>Steven Cohen</td>
+    <td>1125</td>
+    <td>Roger</td>
+    <td>845</td></tr>
 <tr><td>2017</td>
     <td>Week 3</td>
     <td>Steven Cohen</td>
@@ -945,6 +951,12 @@
     <td>1010</td>
     <td>Matthew</td>
     <td>590</td></tr>
+<tr><td>2020</td>
+    <td>Week 2</td>
+    <td>States Edwards</td>
+    <td>1010</td>
+    <td>Rich</td>
+    <td>640</td></tr>
 <tr><td>2003</td>
     <td>Week 2</td>
     <td>Mike Wieczorek</td>
