--- a/freeagt.html
+++ b/freeagt.html
@@ -1,85 +1,107 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2020 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Ben Roethlisberger     </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 145</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Drew Lock              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>  10</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Ben Roethlisberger     </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Derek Carr             </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Philip Rivers          </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Dwayne Haskins         </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Drew Lock              </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Nyheim Hines           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Jalen Richard          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Mike Davis             </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Josh Adams             </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Carlos Hyde            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Alec Ingold            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Jakob Johnson          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Dion Lewis             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Jamaal Williams        </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Frank Gore             </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Robby Anderson         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Robby Anderson         </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 170</td></tr>
 <tr><td><font size=3>Anthony Miller         </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Russell Gage           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Braxton Berrios        </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Corey Davis            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Julian Edelman         </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Willie Snead           </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Keelan Cole            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Marvin Hall            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>David Moore            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Sammy Watkins          </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>Russell Gage           </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Javon Wims             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Danny Amendola         </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Parris Campbell        </td><td><font size=3>  35</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>OJ Howard              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>David Njoku            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Greg Olsen             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Logan Thomas           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Jimmy Graham           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Jordan Reed            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Mike Gesicki           </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>CJ Uzomah              </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tyler Eifert           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Darren Fells           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>OJ Howard              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>David Njoku            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Greg Olsen             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Logan Thomas           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Robert Tonyan          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Jimmy Graham           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Sam Ficken             </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Stephen Gostkowski     </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Stephen Gostkowski     </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Sam Ficken             </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3>  90</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Gabriel Davis          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Darnell Mooney         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Quintez Cephus         </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Devin Asiasi           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Dalton Keene           </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Anthony McFarland      </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Ke'Shawn Vaughn        </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
