--- a/pickups.html
+++ b/pickups.html
@@ -70,8 +70,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mike Gesicki/Cole Kmet</td>
+<td width=50>9/21</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -151,8 +151,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ben Roethlisberger/Daniel Jones</td>
+<td width=50>9/22</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -267,15 +267,15 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jerick McKinnon/Devin Duvernay</td>
+<td width=50>9/22</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Devonta Freeman/Chris Herndon</td>
+<td width=50>9/22</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -329,6 +329,9 @@
 Free Pickups:<br>
 Team 1  - Ryan Succop/Matt Gay (9/12)<br>
 Team 9  - Marvin Jones/Deebo Samuel (9/13)<br>
-Team 8  - Malcolm Brown/Blake Jarwin (9/15)
+Team 8  - Malcolm Brown/Blake Jarwin (9/15)<br>
+Team 6  - Robby Anderson/Courtland Sutton (9/22)<br>
+Team 2  - Mike Davis/Denzel Mims (9/22)<br>
+Team 6  - Julian Edelman/Damien Harris (9/22)
 </td></tr>
 </table>
