--- a/roster.html
+++ b/roster.html
@@ -42,6 +42,7 @@
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td>JAX</td><td>Chris Thompson         </td></tr>
+<tr><td>CAR</td><td>Mike Davis             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
@@ -54,7 +55,6 @@
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
-<tr><td>NYJ</td><td>Denzel Mims            </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td>BUF</td><td>Jake Fromm             </td></tr>
@@ -78,6 +78,7 @@
 <tr><td>PIT</td><td>James Washington       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Rob Gronkowski         </td></tr>
+<tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -85,7 +86,6 @@
 <tr><td> NE</td><td>Justin Rohrwasser      </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>IND</td><td>Rodrigo Blankenship    </td></tr>
-<tr><td>CHI</td><td>Cole Kmet              </td></tr>
 </table>
 </td>
 </tr>
@@ -150,7 +150,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (6)</b></font></td></tr>
 <tr><td> TB</td><td>Tom Brady              </td></tr>
-<tr><td>NYG</td><td>Daniel Jones           </td></tr>
+<tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>BAL</td><td>Mark Ingram            </td></tr>
@@ -186,12 +186,12 @@
 <tr><td>HOU</td><td>David Johnson          </td></tr>
 <tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
-<tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>HOU</td><td>Duke Johnson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
-<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
+<tr><td>CAR</td><td>Robby Anderson         </td></tr>
+<tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
@@ -244,6 +244,7 @@
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
+<tr><td>NYG</td><td>Devonta Freeman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
@@ -251,7 +252,6 @@
 <tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
-<tr><td>NYJ</td><td>Chris Herndon          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -273,6 +273,7 @@
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td>MIA</td><td>Matt Breida            </td></tr>
+<tr><td> SF</td><td>Jerick McKinnon        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
@@ -287,7 +288,6 @@
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
-<tr><td>BAL</td><td>Devin Duvernay         </td></tr>
 </table>
 </td>
 <td>
